# zerotier-edge

./: .gitignore  Cargo.toml  Cross.toml  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  nightly.yml  release.yml  test.yml  version.yml
screenshots/: README.md
src/: log.rs  main.rs
src/api/: ctx.rs  member.rs  mod.rs  network.rs  peer.rs  zt.rs
webui/: .eslintignore  .eslintrc  index.html  package.json  pnpm-lock.yaml  postcss.config.js  prepare.mjs  tailwind.config.ts  tsconfig.json  vite.config.ts
webui/src/: App.tsx  Client.tsx  Logo.tsx  flow-rule.txt  index.css  index.tsx  zerotier-api.d.ts  zerotier.d.ts
webui/src/components/: Accordion.tsx  CheckBox.tsx  CodeMirror.tsx  Fieldset.tsx  FormControl.tsx  Icon.tsx  Logo.tsx  Multicast.tsx  NumberInput.tsx  TextArea.tsx  TextInput.tsx
webui/src/layouts/: Default.Layout.tsx
webui/src/utils/: ipv6-generator.spec.ts  ipv6-generator.ts  rule-compiler.d.ts  rule-compiler.js
webui/src/views/: Loading.tsx  LoginView.tsx  NetworkListView.tsx
webui/src/views/NetworkView/: DNS.tsx  FlowRules.tsx  IPv4AutoAssign.tsx  IPv6AutoAssign.tsx  ManageRoutes.tsx  ManuallyAddMember.tsx  Members.tsx  NetworkSettings.tsx  index.tsx
