[package]
name = "zerotier-edge"
version = "0.1.6"
authors = ["YISH <mokeyish@hotmail.com>"]
edition = "2021"

keywords = ["zerotier", "ui", "self-hosted"]

description = """
A ZeroTier Controller Web UI for a self-hosted ZeroTier network controller that deploied at your edge.
"""

homepage = "https://github.com/mokeyish/zerotier-edge"
repository = "https://github.com/mokeyish/zerotier-edge"
license = "GPL-v3.0"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
dirs = "5.0"
faccess = "0.2.4"
axum = { version = "0.6", features=["headers"] }
async-trait = "0.1"
futures = "0.3"
hyper = { version = "0.14", features = ["client"]}
serde = { version =  "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"]}
tracing = "0.1"
tracing-subscriber = "0.3"
rust-embed = "8.0"
mime_guess = "2.0"
clap = { version = "4.0", features = ["derive"] }


[profile.release]
# see: https://github.com/johnthagen/min-sized-rust
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true
